recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:5: error: ';' expected but 'else' found.
	else{
        ^